@@ -1,3 +1,8 @@
+2013-03-13  Yao Qi  <yao@codesourcery.com>
+
+	* tracepoint.c (traceframe_read_tsv): Look for the last matched
+	'V' block in trace frame.
+
 2013-03-11  Markus Metzger  <markus.t.metzger@intel.com>
 
 	* target.h (struct target_ops): Add btrace ops.
